Añadir metadatos SEO y mejorar estilos en formularios de inicio de sesión y recuperación de contraseña

--- a/KeyHouse-FRONT/public/index.html
+++ b/KeyHouse-FRONT/public/index.html
@@ -19,9 +19,13 @@
          - 'script-src': Permite scripts desde el mismo origen, scripts en línea ('unsafe-inline') y el uso de eval ('unsafe-eval').
          Nota: Las opciones 'unsafe-inline' y 'unsafe-eval' reducen la seguridad y deben revisarse antes de producción. -->
     <title>Keyhouse</title>
+    <meta name="description" content="KeyHouse - Tu plataforma para encontrar y publicar propiedades en alquiler de forma rápida y segura">
+    <meta name="keywords" content="alquiler, propiedades, apartamentos, casas, inmobiliaria">
+    <meta name="robots" content="index, follow">
 </head>
 <body>
     <div id="root"></div>
 </body>
 </html>
 
+    
